--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "@babel/cli": "^7.23.4",
     "@babel/core": "^7.23.7",
     "@babel/preset-env": "^7.23.7",
+    "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
     "eslint": "^8.56.0",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
-    "jest-babel": "^1.0.1",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   },
